# spark_plan_viz

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  Makefile  README.md  RELEASE.md  SECURITY.md  cliff.toml  example.html  pyproject.toml  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
docs/: api-reference.md  changelog.md  contributing.md  gallery.md  getting-started.md  index.md  installation.md
docs/optimization-reference/: index.md
docs/understanding-plans/: aqe.md  index.md  node-types.md
docs/usage/: file-mode.md  index.md  notebook-mode.md  programmatic-api.md
notebooks/: example.html
src/spark_plan_viz/: __init__.py  _analyzer.py  _constants.py  _extractors.py  _parser.py  _renderer.py  _rules.py  _types.py  api.py  template.html  visualize_plan.py
tests/: test_examples.py  test_parsing.py  test_rules.py  test_visualize_plan.py
