[project]
name = "spark-plan-viz"
version = "0.1.0"
description = "A tool to visualize Apache Spark execution plans."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ipython>=9.7.0"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "prek>=0.2.18",
    "pyspark>=4.0.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_calls = false
exclude = ["scripts", "docs", "test", "pyarrow"]
untyped_calls_exclude = ""
