[project]
name = "spark-plan-viz"
dynamic = ["version"]
description = "A tool to visualize Apache Spark execution plans."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ipython>=9.7.0"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_plan_viz"]

[tool.hatch.build.targets.wheel.force-include]
"src/spark_plan_viz/template.html" = "spark_plan_viz/template.html"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "prek>=0.2.18",
    "pyspark==3.5.6",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.mypy]
python_version = "3.12"
exclude = [".venv", "scripts", "docs", "tests"]
files = "**/*.py"
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_calls = false
untyped_calls_exclude = ""

[tool.uv]
package = true
