[project]
name = "spark-plan-viz"
version = "1.1.1"
description = "A tool to visualize Apache Spark execution plans."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["ipython>=9.7.0"]

[project.urls]
Documentation = "https://montanarograziano.github.io/spark_plan_viz/"
Homepage = "https://github.com/montanarograziano/spark_plan_viz"
Repository = "https://github.com/montanarograziano/spark_plan_viz"
Issues = "https://github.com/montanarograziano/spark_plan_viz/issues"
PyPI = "https://pypi.org/project/spark-plan-viz/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_plan_viz"]

[tool.hatch.build.targets.wheel.force-include]
"src/spark_plan_viz/template.html" = "spark_plan_viz/template.html"

[dependency-groups]
dev = [
    "git-cliff>=2.10.1",
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "prek>=0.2.18",
    "pyspark==3.5.6",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "zensical>=0.0.28",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_parser = "conventional"
commit_message = "chore(release): v{version}"
commit_author = "github-actions <actions@users.noreply.github.com>"
major_on_zero = false
build_command = "python -m pip install uv && uv lock --upgrade-package spark-plan-viz && git add uv.lock && uv build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
# We use git-cliff for the actual release changelog, but PSR
# requires a valid changelog config. Keep defaults minimal.
mode = "init"

[tool.mypy]
python_version = "3.11"
exclude = [".venv", "scripts", "docs", "tests"]
files = "**/*.py"
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_calls = false
untyped_calls_exclude = ""

[[tool.mypy.overrides]]
module = "py4j.*"
ignore_missing_imports = true

[tool.uv]
package = true
